adjusted bootstrap path

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
   "author": "jack_gilbert",
   "license": "MIT",
   "dependencies": {
+    "boostrap": "1.0.0",
+    "bootstrap": "3.3.7",
+    "jest-cli": "20.0.4",
     "object-assign": "4.1.0",
     "react": "15.5.4",
     "react-dom": "15.5.4",
